Fix content overflow

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     max-width: 100vw;
     height: 100vh;
     margin: 0;
+    overflow-x: hidden;
 }
 
 footer {
